# RepoRunnerNoPRD

./: .env.example  .gitignore  GitHub_Repo_Validator.md  README.md  docker-compose.yml  project_setup.json  repo_viability_schema_handoff.md
.github/workflows/: ci.yml
backend/: Dockerfile  cleanup.py  codespaces_client.py  config.py  fork_preparer.py  gemini_analyzer.py  github_client.py  jobs.py  main.py  pipeline.py  pyproject.toml  result_analyzer.py  result_fetcher.py  storage.py  worker.py
backend/assets/: devcontainer.json  run.sh
backend/prompts/: failure.txt  summary.txt
backend/routes/: scan.py
backend/tests/: conftest.py  test_api.py  test_fork_preparer.py  test_gemini_analyzer.py  test_github_client.py  test_pipeline.py  test_storage.py
docs/: current_input_contract.md
frontend/: package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/app/scan/[id]/: page.tsx
frontend/app/submit/: page.tsx
frontend/components/: FailureInsight.tsx  PreviewPanel.tsx  RepoSummary.tsx  ScanCard.tsx  StatusTimeline.tsx
frontend/hooks/: useJobStream.ts
frontend/lib/: api.ts
scripts/: e2e_smoke.py
